# bat_classifier

./: .gitignore  QUICKSTART.md  README.md  config.yaml  data.py  evaluate.py  example.py  main.py  model.py  pyproject.toml  test_pooling.py  train.py  utils.py
